fix/text div stretching on mobile

--- a/components/page 404/404.scss
+++ b/components/page 404/404.scss
@@ -54,6 +54,7 @@
         position: relative;
         display: flex;
         align-items: center;
+        justify-content: center;
     }
     &__num {
         font-weight: 800;
